# carbon

./: .gitignore  Cargo.toml  Makefile
.github/actions/enable-kvm/: action.yml
.github/workflows/: ci.yml
.zed/: settings.json
dev/: cloud-init.yml
docs/: CONTRIBUTING.md  DESIGN.md
scripts/: Dockerfile.kernel  build-kernel.sh  docker-entrypoint.sh  kernel-config.sh
src/: main.rs
src/boot/: acpi.rs  bzimage.rs  memory.rs  mod.rs  mptable.rs  paging.rs  params.rs
src/devices/: cmos.rs  mmio.rs  mod.rs  serial.rs
src/devices/virtio/: blk.rs  mod.rs
src/kvm/: mod.rs  vcpu.rs  vm.rs
