[package]
name = "carbon"
version = "0.1.0"
edition = "2021"
description = "A next generation hypervisor"
license = "MIT"

[dependencies]
libc = "0.2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.19"
kvm-bindings = { version = "0.10", features = ["fam-wrappers"] }
vm-memory = { version = "0.16", features = ["backend-mmap"] }
nix = { version = "0.29", features = ["fs", "mman"] }

[profile.release]
lto = true
codegen-units = 1
